loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:1: error: not found: value nbtour
nbtour=0
^LoopCourseForest:2: error: not found: value nbtour
while (nbtour<7){
       ^LoopCourseForest:23: error: not found: value nbtour
  nbtour=nbtour+1
  ^